# game_of_life

./: Cargo.toml  README.md
src/: life.rs  main.rs
