[package]
name = "game_of_life"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
critical-section-lock-mut = "0.1.2"
embedded-hal = "1.0.0"
log = "0.4.27"
microbit-v2 = "0.15.1"
nanorand = { version = "0.7.0", default-features = false, features = ["pcg64"] }
panic-halt = "1.0.0"
rtt-target = { version = "0.6.1", features = ["log"] }


